samples/_failures_safe/1761633187_4bfddb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98336da8.c: In function ‘main’:
./samples/SAFE/__tmp_98336da8.c:173:5: error: expected declaration or statement at end of input
  173 |     executeAlgorithm(graph, BFS, 0);
      |     ^~~~~~~~~~~~~~~~
